# agente-analise-dados-ia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  render.yaml
.github/workflows/: ci.yml  docker-build.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/agents/: __init__.py  langchain_agent.py  tools.py
app/api/: __init__.py  dependencies.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  logging.py
app/llms/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
app/models/: __init__.py  agent.py  api.py  charts.py  cleaning.py  dataset.py  eda.py  explainability.py  insights.py  ml.py  vector.py  workflow.py
app/pipelines/: __init__.py
app/repositories/: __init__.py  dataset_repository.py  model_repository.py  vector_repository.py
app/services/: __init__.py  ai_insight_service.py  (+7 more)
dashboard/: Home.py  __init__.py  api_client.py  i18n.py  theme.py  theming.py
docs/: architecture.md
tests/: conftest.py  test_agent_tools.py  test_ai_insight_service.py  test_chart_service.py  test_cleaning_service.py  test_csv_inspector.py  test_dashboard_api_client.py  test_datasets.py  test_datasets_charts.py  test_datasets_clean.py  test_datasets_insights.py  test_datasets_summary.py  test_datasets_train.py  test_eda_service.py  test_explainability_service.py  test_health.py  test_info.py  test_langchain_agent.py  test_llm_factory.py  test_llm_providers.py  test_ml_pipeline_service.py  test_models_explain.py  test_vector_index_service.py  test_workflow_graph.py  test_workflow_nodes.py
(+25 files in other folders)
